# wsl2hosts

./: Cargo.toml  LICENSE  readme.md
src/: main.rs
src/libs/: command.rs  hosts.rs  mod.rs  scheduler.rs  service.rs  utils.rs  wsl_cli.rs
