[package]
name = "wsl2hosts"
description = "A program that set wsl ip to windows hosts file as windows service."
authors = ["Mark Deng"]
keywords = ["windows", "wsl", "ip"]
license = "MIT"
readme = "readme.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4"
path-slash = "0.2"
clap = {version = "4", features = ["derive"]}
log = "0.4"
flexi_logger = "0.25"
whoami = "1.3"
rpassword = "7.2"
planif = "0.2"
chrono = "0.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = ["Win32_System_TaskScheduler", "Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "implement"]

[[bin]]
name = "wsl2hosts"
path = "src/main.rs"

[profile.release]
debug = 0         # No debug info at all
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on Panic